More spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -12,24 +12,25 @@ code {
     monospace;
 }
 
-.full{
-  position:fixed;
+.full {
+  position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;  
+  bottom: 0;
   right: 0;
-  background-color: rgba(84, 139 ,175, 0.1);
+  background-color: rgba(84, 139, 175,0.1);
 }
 
-.highlight{
+.highlight {
   height: 170px;
   color: rgb(34, 53, 116);
-  background-color: rgba(255, 255, 255, 0.1);
-  transition-duration: 300ms;
+  background-color: rgba(255,255,255,0.1);
+  transition-duration: 2000ms;
 }
 
-.highlight:hover{
+.highlight:hover {
   background-color: rgba(255,255,255,0.5);
+  transition-duration: 2000ms;
 }
 
 .welcometext{
